 * lcdproc client: Add option to turn off title on OldTime screen
 + glcd driver: Connection type 'x11' that draws to a X window (S. Meharg)
 + glcd driver: 'picolcdgfx' for picoLCD 256x64 from Mini-Box.com (S. Meharg)
 * picolcd: Improvements to IR processing (M. Jones)
 + hd44780: Added 'spi' connection type (S. Dawson)
 * hd55780/serial: Change data escape handling (G. Smith)

v0.5.6
 - Remove deprecated CFontz633 driver. Use CFontzPacket with Model=633 instead!
 + new driver: glcd unified graphic display driver (M. Dolze)
 + new driver: vlsys_m428 driver for Moneual MonCaso 320 (W. Hauck)
 * hd44780/serial: Fix handling of keys for LoS-Panel (M. Kirchner)
 * hd44780/serial: Change backlight handling (see commit message)
 + glcd driver: Add FreeType 2 rendering support (B. Walle and M. Dolze)
 + glcd driver: New connection type 'png', writes framebuffer as PNG image
 + hd44780: Fix vBars and block icon not working correctly on the same screen
 * Build system: Link LCDd itself with pthread library if available
 * lcdproc client: Unbreak build on OpenBSD non-i386 (E. Barrett)
 * lcdproc client: Fix core dumps on FreeBSD if started as non-root
 + glcd driver: new connection type 'serdisplib'
 + glcd driver: new connection type 'glcd2usb'
 * lcdproc client: On FreeBSD show only unique processes in 'S' screen
 * picolcd: Use libusb-1.0 asynchronous transfers to fix missed keys (M. Jones)
 * sed1520: Make it work without using an external inverter
 * lis driver: Make the last pixel row work (add lastline option parsing)
 * hd44780/ftdi: Fix error in setting backlight and add backlight for 4bit mode
 + new driver: sdeclcd for Watchguard FireBox appliances (F. Mertz)
 + hd44780: Added 'usb4all' connection type (T. Mohaupt)
 * Fix RPM init script hanging on recent OS (#3488223)
 * lcdproc client: Fix build on OpenBSD >= 5.0
 * hd44780/serial: Add support for adjustable backlight
 * Build system: Fix build with automake >= 1.11.3 (#3494755)