@@ -233,7 +233,7 @@ dnl			else
 				HD44780_DRIVERS="$HD44780_DRIVERS hd44780-hd44780-piplate.o"
 			fi
 			if test "$x_ac_have_spi" = yes; then
-				HD44780_DRIVERS="$HD44780_DRIVERS hd44780-hd44780-spi.o"
+				HD44780_DRIVERS="$HD44780_DRIVERS hd44780-hd44780-spi.o hd44780-hd44780-pifacecad.o"
 			fi
 dnl			The hd4470-rpi driver only works on a Raspberry Pi,
 dnl			which is an ARM platform. Require people to compile on
